--- a/apps/loan/assets/src/app/components/assets-form/assets-form.component.html
+++ b/apps/loan/assets/src/app/components/assets-form/assets-form.component.html
@@ -1,203 +1,6 @@
-<form [formGroup]="assetsForm" (ngSubmit)="onSubmit()" class="assets-form">
-  <div class="form-section">
-    <h3>Vehicle Information</h3>
-    <div class="form-row">
-      <label for="anyVehicles">Any Vehicles?</label>
-      <p-checkbox
-        id="anyVehicles"
-        formControlName="anyVehicles"
-        [binary]="true"
-      ></p-checkbox>
-    </div>
-    <div class="form-row">
-      <label for="vehiclesOnCreditBureau">Vehicles on Credit Bureau</label>
-      <input
-        type="number"
-        id="vehiclesOnCreditBureau"
-        pInputText
-        formControlName="vehiclesOnCreditBureau"
-      />
-    </div>
-    <div class="form-row">
-      <label for="collateralVehicles">Collateral Vehicles</label>
-      <input
-        type="number"
-        id="collateralVehicles"
-        pInputText
-        formControlName="collateralVehicles"
-      />
-    </div>
-  </div>
-
-  <div class="form-section">
-    <div class="form-row">
-      <label for="who">Who</label>
-      <p-dropdown
-        id="who"
-        formControlName="who"
-        [options]="[
-          { label: 'Applicant', value: 'Applicant' },
-          { label: 'Co-Applicant', value: 'Co-Applicant' }
-        ]"
-      ></p-dropdown>
-    </div>
-    <div class="form-row">
-      <label for="category">Category</label>
-      <p-dropdown
-        id="category"
-        formControlName="category"
-        [options]="[{ label: 'Auto or Truck', value: 'Auto or Truck' }]"
-      ></p-dropdown>
-    </div>
-    <div class="form-row">
-      <label for="collateral">Collateral?</label>
-      <p-checkbox
-        id="collateral"
-        formControlName="collateral"
-        [binary]="true"
-      ></p-checkbox>
-    </div>
-    <div class="form-row">
-      <label for="reasonNotCollateral">Reason Not Collateral</label>
-      <input
-        type="text"
-        id="reasonNotCollateral"
-        pInputText
-        formControlName="reasonNotCollateral"
-      />
-    </div>
-  </div>
-
-  <div class="form-section">
-    <h3>Valuation / Vehicle Details</h3>
-    <div formGroupName="valuation">
-      <div class="form-row">
-        <label for="year">Year</label>
-        <input type="text" id="year" pInputText formControlName="year" />
-      </div>
-      <div class="form-row">
-        <label for="make">Make</label>
-        <input type="text" id="make" pInputText formControlName="make" />
-      </div>
-      <div class="form-row">
-        <label for="model">Model</label>
-        <input type="text" id="model" pInputText formControlName="model" />
-      </div>
-      <div class="form-row">
-        <label for="vin">VIN</label>
-        <input type="text" id="vin" pInputText formControlName="vin" />
-      </div>
-      <div class="form-row">
-        <label for="mileage">Mileage</label>
-        <input type="text" id="mileage" pInputText formControlName="mileage" />
-      </div>
-      <div class="form-row">
-        <label for="mileageUpdated">Mileage Updated</label>
-        <input
-          type="text"
-          id="mileageUpdated"
-          pInputText
-          formControlName="mileageUpdated"
-        />
-      </div>
-      <div class="form-row">
-        <label for="value">Value</label>
-        <input type="text" id="value" pInputText formControlName="value" />
-      </div>
-      <div class="form-row">
-        <label for="by">By</label>
-        <input type="text" id="by" pInputText formControlName="by" />
-      </div>
-      <div class="form-row">
-        <label for="ownedFreeAndClear">Owned Free & Clear?</label>
-        <p-checkbox
-          id="ownedFreeAndClear"
-          formControlName="ownedFreeAndClear"
-          [binary]="true"
-        ></p-checkbox>
-      </div>
-      <div class="form-row">
-        <label for="firstLienHolder">1st Lien Holder</label>
-        <input
-          type="text"
-          id="firstLienHolder"
-          pInputText
-          formControlName="firstLienHolder"
-        />
-      </div>
-      <div class="form-row">
-        <label for="balance">Balance</label>
-        <input type="text" id="balance" pInputText formControlName="balance" />
-      </div>
-      <div class="form-row">
-        <label for="secondLienHolder">2nd Lien Holder</label>
-        <input
-          type="text"
-          id="secondLienHolder"
-          pInputText
-          formControlName="secondLienHolder"
-        />
-      </div>
-      <div class="form-row">
-        <label for="autoCheckComplete">Auto check complete?</label>
-        <p-checkbox
-          id="autoCheckComplete"
-          formControlName="autoCheckComplete"
-          [binary]="true"
-        ></p-checkbox>
-      </div>
-      <div class="form-row">
-        <label for="vehicleInspection">Vehicle Inspection?</label>
-        <p-checkbox
-          id="vehicleInspection"
-          formControlName="vehicleInspection"
-          [binary]="true"
-        ></p-checkbox>
-      </div>
-      <div class="form-row">
-        <label for="exceptionApproved">Exception Approved?</label>
-        <p-checkbox
-          id="exceptionApproved"
-          formControlName="exceptionApproved"
-          [binary]="true"
-        ></p-checkbox>
-      </div>
-      <div class="form-row">
-        <label for="qualifiedForDirectAuto">Qualified for Direct Auto?</label>
-        <p-checkbox
-          id="qualifiedForDirectAuto"
-          formControlName="qualifiedForDirectAuto"
-          [binary]="true"
-        ></p-checkbox>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-section">
-    <div class="form-row">
-      <label for="salvageTitle">Salvage Title?</label>
-      <p-checkbox
-        id="salvageTitle"
-        formControlName="salvageTitle"
-        [binary]="true"
-      ></p-checkbox>
-    </div>
-    <div class="form-row">
-      <label for="purchaseMoney">Purchase Money?</label>
-      <p-checkbox
-        id="purchaseMoney"
-        formControlName="purchaseMoney"
-        [binary]="true"
-      ></p-checkbox>
-    </div>
-  </div>
-
-  <div class="form-row">
-    <button
-      pButton
-      type="submit"
-      label="Submit"
-      [disabled]="!assetsForm.valid"
-    ></button>
-  </div>
-</form>
+<lib-form-generator
+  [formModel]="formModel"
+  [formGroup]="assetsForm"
+  [options]="{ submitButton: { hide: false, label: 'Submit' } }"
+  (completed)="onSubmit()"
+></lib-form-generator>
