--- a/apps/loan/assets/src/app/components/assets-form/assets-form.component.html
+++ b/apps/loan/assets/src/app/components/assets-form/assets-form.component.html
@@ -1,6 +1,6 @@
 <lib-form-generator
   [formModel]="formModel"
-  [formGroup]="assetsForm"
+  [formGroup]="assetsSvc.assetsForm"
   [options]="{ submitButton: { hide: false, label: 'Submit' } }"
   (completed)="onSubmit()"
 ></lib-form-generator>
