--- a/apps/loan/assets/src/app/components/assets-table/assets-table.component.html
+++ b/apps/loan/assets/src/app/components/assets-table/assets-table.component.html
@@ -31,11 +31,10 @@
       <td>{{ asset.valuation.ownedFreeAndClear ? 'Yes' : 'No' }}</td>
       <td>{{ asset.salvageTitle ? 'Yes' : 'No' }}</td>
       <td class="d-flex">
-        <a (click)="assetsSvc.editAsset(asset)" class="me-2">
+        <a (click)="assetsSvc.setAssetForEdit(asset)" class="me-2" tabindex="1">
           <i class="pi pi-pencil"></i> Edit
         </a>
-
-        <a (click)="assetsSvc.deleteAsset(asset)">
+        <a (click)="assetsSvc.deleteAsset(asset)" class="a" tabindex="1">
           <i class="pi pi-trash"></i> Delete
         </a>
       </td>
