Reorganize assets form

--- a/apps/loan/assets/src/app/components/assets-form/assets-form.component.scss
+++ b/apps/loan/assets/src/app/components/assets-form/assets-form.component.scss
@@ -1,3 +1,11 @@
+::ng-deep {
+  .bg-highlight {
+    background-color: var(--color-bg-lt);
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+
 .assets-form {
   display: flex;
   flex-direction: column;
