Updates to assets form builder

--- a/libs/forms/src/lib/components/form-generator/button/button.component.html
+++ b/libs/forms/src/lib/components/form-generator/button/button.component.html
@@ -2,10 +2,10 @@
   <button
     *ngIf="visible$ | async"
     class="form-generator-button"
-    [attr.id]="button.id || null"
-    [ngClass]="button.cssClasses ?? ''"
-    [ngStyle]="button.inlineStyles ?? null"
-    [innerHtml]="button.label"
+    [attr.id]="button()?.id || null"
+    [ngClass]="button()?.cssClasses ?? ''"
+    [ngStyle]="inlineStyles()"
+    [innerHtml]="button()?.label"
     (click)="command()"
   ></button>
 </ng-container>
