--- a/apps/loan/assets/src/app/assets.component.html
+++ b/apps/loan/assets/src/app/assets.component.html
@@ -4,7 +4,7 @@
       <p-card styleClass="mb-3">
         <h1>
           <lib-icons icon="car"></lib-icons>
-          Assets ({{ assetsCount$ | async }})
+          Assets ({{ assetsCount$ | async }}) | v2
         </h1>
         <app-assets-table></app-assets-table>
       </p-card>
